--- a/Unit1Project/Views/Home/AgeResults.cshtml
+++ b/Unit1Project/Views/Home/AgeResults.cshtml
@@ -3,7 +3,8 @@
 *@
 @{
 }
-
+<h2>Firaol Baneta</h2>
 <h2> Your Age</h2>
+
 <p>Your Age is @Model.Age years </p>
 <a asp-controller= "Home" asp-action= "Index">Calculate Another Age</a>
